[gd_scene load_steps=8 format=3 uid="uid://b80fpoy377dm0"]

[ext_resource type="Script" path="res://scripts/properties_panel.gd" id="1_v4aq7"]
[ext_resource type="Texture2D" uid="uid://cjemw1wmjw35n" path="res://assets/icons/blank.svg" id="2_bn8s1"]
[ext_resource type="StyleBox" uid="uid://ixt5lyof837o" path="res://resources/styles/background_panel.tres" id="2_dgqls"]
[ext_resource type="PackedScene" uid="uid://kygn726f428r" path="res://scenes/attribute_item_list.tscn" id="4_2x7pa"]
[ext_resource type="Texture2D" uid="uid://iiwf2vqlgll6" path="res://assets/icons/copy.svg" id="5_erhac"]
[ext_resource type="Texture2D" uid="uid://cj1sy2rqm7ik5" path="res://assets/icons/folder.svg" id="6_dp8h1"]
[ext_resource type="Texture2D" uid="uid://dxqfbup70l6ia" path="res://assets/icons/edit.svg" id="7_4d77c"]

[node name="Properties" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v4aq7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SelectionBar" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="SelectionIcon" type="TextureRect" parent="VBoxContainer/SelectionBar"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("2_bn8s1")
stretch_mode = 3

[node name="SelectionLabel" type="Label" parent="VBoxContainer/SelectionBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
vertical_alignment = 1
text_overrun_behavior = 3

[node name="AttributesPanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("2_dgqls")

[node name="AttributeItemList" parent="VBoxContainer/AttributesPanelContainer" instance=ExtResource("4_2x7pa")]
layout_mode = 2

[node name="ContextActionContainer" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="PlayerActionContainer" type="HFlowContainer" parent="VBoxContainer/ContextActionContainer"]
visible = false
layout_mode = 2

[node name="PlayerCopyButton" type="Button" parent="VBoxContainer/ContextActionContainer/PlayerActionContainer"]
layout_mode = 2
tooltip_text = "Copy All Properties"
text = "Copy"
icon = ExtResource("5_erhac")

[node name="SessionActionContainer" type="HFlowContainer" parent="VBoxContainer/ContextActionContainer"]
visible = false
layout_mode = 2

[node name="SessionCopyButton" type="Button" parent="VBoxContainer/ContextActionContainer/SessionActionContainer"]
layout_mode = 2
tooltip_text = "Copy All Properties"
text = "Copy"
icon = ExtResource("5_erhac")

[node name="SessionOpenButton" type="Button" parent="VBoxContainer/ContextActionContainer/SessionActionContainer"]
layout_mode = 2
tooltip_text = "Open Session"
text = "Open"
icon = ExtResource("6_dp8h1")

[node name="MatchActionContainer" type="HFlowContainer" parent="VBoxContainer/ContextActionContainer"]
visible = false
layout_mode = 2

[node name="MatchCopyButton" type="Button" parent="VBoxContainer/ContextActionContainer/MatchActionContainer"]
layout_mode = 2
tooltip_text = "Copy All Properties"
text = "Copy"
icon = ExtResource("5_erhac")

[node name="MatchEditButton" type="Button" parent="VBoxContainer/ContextActionContainer/MatchActionContainer"]
layout_mode = 2
tooltip_text = "Edit Match"
text = "Edit"
icon = ExtResource("7_4d77c")
